スプレッドシートのデータを更新

--- a/src/config.json
+++ b/src/config.json
@@ -5,7 +5,5 @@
   "logo_image_url": "https://geoloniamaps.github.io/pwamap/icon-pwamap.svg",
   "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
   "primary_color": "#d2691e",
-  "orderby": "distance",
-  "id": "geoloniamaps",
-  "repository": "pwamap"
+  "orderby": "distance"
 }
