--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,52 +1,28 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: build
+name: Deploy
 
 on:
   push:
-    branches:
-      - 'master'
+    branches: [ main ]
 
   workflow_dispatch:
 
-  schedule:
-    - cron:  '*/10 * * * *'
-    # 10分ごとに実行
-
 jobs:
-  ubuntu:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 16.x
+      - uses: actions/checkout@v2
 
-    - run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Download data and set up environment variables
-      run: |
-        npm run build
+      - name: Build the app
+        run: npm run build
 
-    - name: Build PWA Assets
-      run: |
-        npm run build:assets
-
-    - name: Push the data to Github
-      run: |
-        git config --global user.name "${GITHUB_ACTOR}"
-        git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        if (git diff --shortstat | grep '[0-9]'); then \
-          git add .; \
-          git status .; \
-          git commit -m "スプレッドシートのデータを更新"; \
-          git push -f origin master; \
-        fi
-
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@4.1.1
-      with:
-        branch: 'gh-pages'
-        folder: './build/'
-        target-folder: './'
+      - name: Deploy the app to `gh-pages`
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: build
+          publish_branch: gh-pages
+          force_orphan: true
