--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "chalk": "^5.0.1",
-    "csv-parse": "^5.2.2",
+    "csv-parse": "^5.3.2",
     "csv2geojson": "^5.1.1",
     "icon-gen": "^3.0.0",
     "next-qrcode": "^2.0.0",
@@ -33,8 +33,8 @@
     "typescript": "~4.6.2"
   },
   "scripts": {
-    "start": "node bin/download.js && node bin/config.js && react-scripts start",
-    "build": "node bin/download.js && node bin/config.js && react-scripts build",
+    "start": "node bin/config.js && react-scripts start",
+    "build": "node bin/config.js && react-scripts build",
     "build:assets": "pwa-asset-generator public/logo.svg ./public/ --index ./public/index.html --manifest ./public/manifest.json --favicon true",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-stars": "^2.2.1",
