--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "autolinker": "^4.0.0",
     "chalk": "^5.0.1",
     "csv-parse": "^5.3.2",
     "csv2geojson": "^5.1.1",
